--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,13 @@
 {
     "version": "0.1.0",
-    "npmClient": "yarn"
-  }
+    "npmClient": "yarn",
+    "command": {
+        "publish": {
+            "message": "chore(release): publish",
+            "registry": "https://github.com/jackiecookie/kerberos.git"
+        }
+    },
+    "packages": [
+        "packages/*"
+    ]
+}
