--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -7,5 +7,6 @@
     "dependencies": {
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
-    }
+    },
+    "gitHead": "98ff19e86a22c78466fd95b1578f8454343269dc"
 }
