--- a/packages/kerberos-container/package.json
+++ b/packages/kerberos-container/package.json
@@ -8,5 +8,6 @@
         "axios": "^0.19.1",
         "react": "^16.12.0",
         "url-parse": "^1.4.7"
-    }
+    },
+    "gitHead": "98ff19e86a22c78466fd95b1578f8454343269dc"
 }
