--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "app",
+    "name": "kerberos-app",
     "version": "0.1.0",
     "main": "index.ts",
     "author": "潘迪海 <2711002357@qq.com>",
@@ -8,5 +8,5 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
     },
-    "gitHead": "7e6574915e287ace728698d75719741c477811f8"
+    "gitHead": "328a47e5c8020fc7e09fb5bce58087b44235f042"
 }
