--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -9,8 +9,5 @@
         "react-dom": "^16.12.0"
     },
     "gitHead": "a819d771cc9311ff39aaae155078f4340dff7751",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/jackiecookie/kerberos.git"
-    }
+    "repository": "https://github.com/jackiecookie/kerberos/tree/master/packages/kerberos-app"
 }
