--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,7 @@
 {
     "version": "0.1.0",
     "npmClient": "yarn",
-    "command": {
-        "publish": {
-            "message": "chore(release): publish",
-            "registry": "https://github.com/jackiecookie/kerberos.git"
-        }
-    },
+    "registry": "https://registry.npmjs.org/",
     "packages": [
         "packages/*"
     ]
