--- a/packages/kerberos-script/package.json
+++ b/packages/kerberos-script/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kerberos-script",
+  "name": "@kerberos/script",
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
@@ -71,5 +71,5 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
-  "gitHead": "328a47e5c8020fc7e09fb5bce58087b44235f042"
+  "gitHead": "428a240ba8ac0e76094807470633c40a88c8a785"
 }
