--- a/packages/kerberos-container/package.json
+++ b/packages/kerberos-container/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "@kerberos/container",
+    "name": "kerberos-container",
     "version": "0.1.0",
     "main": "index.ts",
     "author": "潘迪海 <2711002357@qq.com>",
     "license": "MIT",
     "dependencies": {
+        "@types/react": "^16.9.17",
+        "@types/react-dom": "^16.9.4",
         "axios": "^0.19.1",
         "react": "^16.12.0",
         "url-parse": "^1.4.7"
     },
-    "gitHead": "428a240ba8ac0e76094807470633c40a88c8a785"
+    "gitHead": "4683315338a37ee04bf52124401e73387f75095a"
 }
