--- a/packages/kerberos-script/package.json
+++ b/packages/kerberos-script/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kerberos/script",
+  "name": "kerberos-script",
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
@@ -71,5 +71,5 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
-  "gitHead": "428a240ba8ac0e76094807470633c40a88c8a785"
+  "gitHead": "4683315338a37ee04bf52124401e73387f75095a"
 }
