--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -5,6 +5,7 @@
     "author": "潘迪海 <2711002357@qq.com>",
     "license": "MIT",
     "dependencies": {
+        "kerberos-utils": "^0.1.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
     },
