--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -1,13 +1,21 @@
 {
     "name": "kerberos-app",
     "version": "0.1.1",
-    "main": "index.ts",
+    "main": "src/index.js",
+    "types": "src/index",
     "author": "潘迪海 <2711002357@qq.com>",
     "license": "MIT",
     "dependencies": {
         "kerberos-utils": "^0.1.4",
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
+    },
+    "scripts": {
+        "test": "jest",
+        "build": "npm run clean && npm run compile",
+        "clean": "rm -rf ./src && rm -rf tsconfig.build.tsbuildinfo",
+        "compile": "tsc -b tsconfig.build.json",
+        "prepublishOnly": "npm run build"
     },
     "gitHead": "69e69c5bbd30cb8ce80fe3eaadf523825950d0dd",
     "repository": "https://github.com/jackiecookie/kerberos/tree/master/packages/kerberos-app"
