--- a/packages/kerberos-app/package.json
+++ b/packages/kerberos-app/package.json
@@ -6,6 +6,7 @@
     "author": "潘迪海 <2711002357@qq.com>",
     "license": "MIT",
     "dependencies": {
+        "@types/react-dom": "^16.9.5",
         "kerberos-utils": "^0.1.4",
         "react": "^16.12.0",
         "react-dom": "^16.12.0"
