--- a/packages/kerberos-app/tsconfig.build.json
+++ b/packages/kerberos-app/tsconfig.build.json
@@ -1,10 +1,7 @@
 {
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "composite": true,
-    "declaration": true,
-    "outDir": "./src",
-    "module": "commonjs",
-    "target": "es5"
+    "outDir": "src",
   },
   "exclude": ["node_modules", "src", "tests"]
 }
