--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,7 +7,8 @@
     "jsx": "preserve",
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "target": "es6",
+    "module": "commonjs",
+    "target": "es5",
     "lib": ["dom", "es2017"],
     "skipLibCheck": true
   },
