--- a/packages/kerberos-script/package.json
+++ b/packages/kerberos-script/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kerberos",
+  "name": "kerberos-script",
   "version": "0.1.5",
   "main": "index.js",
   "license": "MIT",
@@ -66,7 +66,7 @@
   "scripts": {
     "init:node": ""
   },
-  "bin": "./bin/kerberos.js",
+  "bin": "./bin/kerberos-script.js",
   "devDependencies": {
     "kerberos-app": "^0.1.1",
     "kerberos-container": "^0.1.1",
@@ -74,5 +74,5 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   },
-  "gitHead": "9d7331f554e1a7da6d3d47580635a012c9c3b68b"
+  "gitHead": "bb5f66d7458964517097f68c9b9df9c485884835"
 }
