--- a/packages/kerberos-script/package.json
+++ b/packages/kerberos-script/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
     "address": "^1.1.2",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.4",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
@@ -45,6 +46,7 @@
     "npmlog": "^4.1.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "os": "^0.1.1",
+    "postcss-loader": "^3.0.0",
     "postcss-safe-parser": "^4.0.1",
     "react-dev-utils": "^10.0.0",
     "sass-loader": "^8.0.0",
