--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.9.0",
+    "codecov": "^3.6.2",
     "jest": "^24.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -19,7 +20,8 @@
     "prettier": "^1.19.1"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
+    "codecov": "codecov",
     "build": "lerna run build",
     "pub": "yarn build && lerna publish from-package --yes"
   }
