--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ node_js:
   - '8'
 script:
   - npm run test
+
+before_script:
+  - npm run build
+  - npm run bootstrap
+  
 after_success:
   - npm run codecov"
 cache:
