--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: node_js
 node_js:
   - '8'
 script:
-  - npm run test
+  - yarn test
 
 before_script:
-  - npm run bootstrap
+  - yarn bootstrap
 
 after_success:
-  - npm run codecov"
+  - yarn codecov"
 cache:
   directories:
     - ./node_modules
