--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
     "version": "0.1.2",
     "npmClient": "yarn",
+    "useWorkspaces": true,
     "registry": "https://registry.npmjs.org/",
     "packages": [
         "packages/*"
