--- a/packages/kerberos-utils/package.json
+++ b/packages/kerberos-utils/package.json
@@ -27,6 +27,8 @@
         "jest": "^24.9.0",
         "react": "^16.12.0",
         "ts-jest": "^24.3.0",
-        "typescript": "^3.7.5"
+        "typescript": "^3.7.5",
+        "vue": "^2.6.11",
+        "vuex": "^3.1.2"
     }
 }
