--- a/packages/kerberos-utils/package.json
+++ b/packages/kerberos-utils/package.json
@@ -25,6 +25,7 @@
         "@types/jest": "^24.9.0",
         "@types/react": "^16.9.17",
         "jest": "^24.9.0",
+        "jest-fetch-mock": "^3.0.1",
         "react": "^16.12.0",
         "ts-jest": "^24.3.0",
         "typescript": "^3.7.5",
